--- a/reading.html
+++ b/reading.html
@@ -405,6 +405,17 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.00 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="may" class="section level3">
+<h3>May</h3>
+<div id="thursday-may-20" class="section level4">
+<h4>Thursday May 20</h4>
+<p><a href="https://doi.org/10.1101/2021.03.16.435597">Groen et al preprint</a> Fitness costs and benefits of gene expression plasticity in rice under drought</p>
+</div>
+<div id="thursday-may-6" class="section level4">
+<h4>Thursday May 6</h4>
+<p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1009411">Berdan et al 2021</a> Deleterious mutation accumulation and the long-term fate of chromosomal inversions</p>
+</div>
+</div>
 <div id="april" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-29" class="section level4">
@@ -575,7 +586,7 @@ $(document).ready(function () {
 <p><a href="https://www.nature.com/articles/s41588-020-0612-7">Voichek and Weigel 2020</a> Identifying genetic variants underlying phenotypic variation in plants without complete genomes</p>
 </div>
 </div>
-<div id="may" class="section level3">
+<div id="may-1" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-28" class="section level4">
 <h4>Thursday May 28</h4>
@@ -771,7 +782,7 @@ $(document).ready(function () {
 <p><a href="https://www.biorxiv.org/content/10.1101/342352v3">Stankowski et al preprint</a> Widespread selection and gene flow shape the genomic landscape during a radiation of monkeyflowers</p>
 </div>
 </div>
-<div id="may-1" class="section level3">
+<div id="may-2" class="section level3">
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
