--- a/people.html
+++ b/people.html
@@ -458,7 +458,7 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Tom is a master student studying the genomic distribution of MYB transcription factors in the amaranth genome and their involvement in metabolic pathways <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Tom is a master student studying the the amaranth transcriptome and the involvement of transcriptomic changes in metabolic pathways <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!--
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
@@ -467,6 +467,14 @@ $(document).ready(function () {
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
+<div style="float: left">
+<p><img src="own_images/people/Leonie_Eberhard.jpeg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Leonie Eberhard</strong>
+<div style="float: left">
+
+</div>
+<p>Leonie is a CEPLAS intern evaluating the phenotypic diversity of a grain amaranth reference population. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <strong>Julio Martinez</strong>
 <div style="float: left">
 
