--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="may" class="section level3">
 <h3>May</h3>
+<div id="thursday-may-27" class="section level4">
+<h4>Thursday May 27</h4>
+<p><a href="https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/tpj.15298">Ma et al 2021</a> A chromosome-level Amaranthu cruentus genome assembly highlights gene family evolution and biosynthetic gene clusters that may underpin the nutritional value of this traditional crop</p>
+</div>
 <div id="thursday-may-20" class="section level4">
 <h4>Thursday May 20</h4>
 <p><a href="https://doi.org/10.1101/2021.03.16.435597">Groen et al preprint</a> Fitness costs and benefits of gene expression plasticity in rice under drought</p>
