--- a/reading.html
+++ b/reading.html
@@ -405,6 +405,13 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.00 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="august" class="section level3">
+<h3>August</h3>
+<div id="thursday-august-5" class="section level4">
+<h4>Thursday August 5</h4>
+<p><a href="https://www.nature.com/articles/s41477-021-00905-1">Milla and Osborne, 2021</a> Crop origins explain variation in global agricultural relevance</p>
+</div>
+</div>
 <div id="july" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-29" class="section level4">
@@ -736,7 +743,7 @@ $(document).ready(function () {
 <p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.5463">Mattila et al 2019</a> Impact of demography on linked selection in two outcrossing Brassicaceae species</p>
 </div>
 </div>
-<div id="august" class="section level3">
+<div id="august-1" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-29" class="section level4">
 <h4>Thursday August 29</h4>
