--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="august" class="section level3">
 <h3>August</h3>
+<div id="thursday-august-26" class="section level4">
+<h4>Thursday August 26</h4>
+<p><a href="https://www.nature.com/articles/s41559-021-01526-9">Aguirre-Liguori et al, 2021</a> The evolutionary genomics of species’ responses to climate change</p>
+</div>
 <div id="thursday-august-19" class="section level4">
 <h4>Thursday August 19</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/2021.08.05.455207v1">Sachdeva et al, preprint</a> Genetic load and extinction in peripheral populations: the roles of migration, drift and demographic stochasticity</p>
