CEPLAS video and CROP

--- a/index.html
+++ b/index.html
@@ -366,13 +366,6 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="news.html">
-    <span class="ion ion-flash"></span>
-     
-    News
-  </a>
-</li>
-<li>
   <a href="contact.html">
     <span class="ion ion-android-contact"></span>
      
@@ -401,9 +394,11 @@ $(document).ready(function () {
 </div>
 
 
-<p>Welcome to the Stetter lab in the <a href="http://www.botanik.uni-koeln.de/1634.html?&amp;L=1">Botanical Institute</a> at the <a href="https://www.uni-koeln.de/">University of Cologne</a>. We are interested in crop evolution and adaptation. We study the incomplete domestication of the South American pseudo-cereal, amaranth, and the domestication and cultivation history of maize. We use population and quantitative genetic methods to understand how wild plants became crops and how these crops spread across the globe.</p>
+<p>Welcome to the Stetter lab in the <a href="http://www.botanik.uni-koeln.de/1634.html?&amp;L=1">Institute for Plant Sciences</a> at the <a href="https://www.uni-koeln.de/">University of Cologne</a>. We are interested in crop evolution and adaptation. We study the incomplete domestication of the South American pseudo-cereal, amaranth, and the domestication and cultivation history of maize. We use population and quantitative genetic methods to understand how wild plants became crops and how these crops spread across the globe.</p>
 <p>Read more about our <a href="research.html">research</a> and who we are on this site. If you like what we do and would like to join the lab please contact <a href="mailto:m.stetter@uni-koeln.de">Markus</a> to find out more about openings and possibilities to apply for fellowships.</p>
 <p><img src="own_images/labcloud.png" /></p>
+<p>Our lab is also a member of the Cluster of Excellence on Plant Sciences (<a href="https://www.ceplas.eu/en/research/principal-investigators/dr-markus-stetter/">CEPLAS</a>). In this video we give some insight how we contribute to the goal of CEPLAS, “SMART Plants for Tomorrow’s Needs”</p>
+<p><a href="https://www.youtube.com/watch?v=XitwCNy9knk" title="link title"><img src="own_images/csm_Bild_Video_Stetter.png" alt="Youtube" /></a></p>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
 <script>
