Akanksha and Susanne added, CROP and publications

--- a/people.html
+++ b/people.html
@@ -407,6 +407,17 @@ $(document).ready(function () {
 <p>Markus is group leader in the Institute for Plant Sciences at the University of Cologne <a href="about.html">read more</a></p>
 <!-- break -->
 <p><br> <br> <br> <!-- break --></p>
+<div id="postdoc" class="section level2">
+<h2>Postdoc</h2>
+<div style="float: left">
+<p><img src="own_images/people/akanksha.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Akanksha Singh</strong>
+<div style="float: left">
+
+</div>
+<p>Akanksha studies the introduction history of grain amaranth to India and the sources of adaptive alleles. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+</div>
 <div id="phd-students" class="section level2">
 <h2>PhD students</h2>
 <div style="float: left">
@@ -433,9 +444,20 @@ $(document).ready(function () {
 
 </div>
 <p>Kerstin is a PhD student and part of the CEPLAS graduate school. Kerstin employs ancestral recombination graphs to study the evolution of maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/SusanneVollmer.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Susanne Vollmer</strong>
+<div style="float: left">
+
+</div>
+<p>Susanne is a PhD student and part of the CEPLAS graduate school in collaboration with the <a href="https://www.ceplas.eu/en/research/people/dr-goetz-hensel">Hensel lab at HHU</a>. Susanne advances various molecular methods for amaranth and dissects the regulation of seed color adaptation. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="lab-manager" class="section level2">
 <h2>Lab manager</h2>
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
 <strong>Roswitha Lentz</strong>
 <div style="float: left">
 
