--- a/reading.html
+++ b/reading.html
@@ -400,6 +400,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="thursday-october-21" class="section level4">
+<h4>Thursday October 21</h4>
+<p><a href="https://doi.org/10.1093/molbev/msab287">Fuentes et al, 2021</a> Domestication shapes recombination patterns in tomato</p>
+</div>
 <div id="thursday-october-7" class="section level4">
 <h4>Thursday October 7</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/2021.09.09.459637v1.full">Tittes et al, preprint</a> Not so local: the population genetics of convergent adaptation in maize and teosinte</p>
