--- a/publications.html
+++ b/publications.html
@@ -396,15 +396,23 @@ $(document).ready(function () {
 <div id="publications" class="section level1">
 <h1>Publications <a href="http://scholar.google.com/citations?user=yYKVZQQAAAAJ"><img src="own_images/scholar.png" style="width: 80px;"></a></h1>
 <p>   </p>
+<div id="preprint" class="section level2">
+<h2>preprint</h2>
+<ul>
+<li><a href="https://doi.org/10.1101/2021.09.01.458502">Domestication Reshaped the Genetic Basis of Inbreeding Depression in a Maize Landrace Compared to its Wild Relative, Teosinte</a> LF Samayoa, BA Olukolu, CJ Yang, Q Chen, <strong>Markus G Stetter</strong>, Alessandra M York, Jose de Jesus Sanchez-Gonzalez, Jeffrey C Glaubitz, Peter J Bradbury, Maria Cinta Romay, Qi Sun, Jinliang Yang, Jeffrey Ross-Ibarra, Edward S Buckler, JF Doebley and James B Holland</li>
+</ul>
+</div>
 <div id="section" class="section level2">
 <h2>2021</h2>
 <ul>
+<li><p><a href="https://doi.org/10.3390/agronomy11050970">Breeding Amaranth for Biomass: Evaluating Dry Matter Content and Biomass Potential in Early and Late Maturing Genotypes</a> Ali Baturaygil, <strong>Markus G Stetter</strong> and Karl Schmid <em>Agronomy</em></p></li>
 <li><p><a href="https://doi.org/10.1093/g3journal/jkab103">PopAmaranth: A population genetic genome browser for grain amaranths and their wild relatives</a><br />
 <strong>José Gonçalves-Dias</strong> and <strong>Markus G Stetter</strong> <em>G3</em><br />
 Link to PopAmaranth: <a href="https://amaranthgdb.org">amaranthGDB.org</a><br />
 <a href="https://doi.org/10.1101/2020.12.09.415331">Preprint</a></p></li>
 <li><p><a href="https://www.nature.com/articles/s41477-020-00834-5.epdf?sharing_token=_mN9oSJzgPbS9Ldsr01s8dRgN0jAjWel9jnR3ZoTv0OIqw-nLs7dqtihevHgjRdBgKyJmnWQSkGOUEc4hulR2jnTLjP4fqtKbSUSzA7iWbyA0E0YEvXdfVUO_1_dmi2uNdJtrPRcKz9O_jp58VwFcP02Yhzr7I3YNxgg8Oit1Xk%3D">Comparative evolutionary analysis and prediction of deleterious mutation patterns between sorghum and maize</a><br />
-Roberto Lozano, Elodie Gazave, Jhonathan P.R. dos Santos, <strong>Markus G Stetter</strong>, Ravi Valluru, Nonoy Bandillo, Samuel B. Fernandes, Patrick J. Brown, Nadia Shakoor, Todd C. Mockler, Edward S. Buckler, Jeffrey Ross-Ibarra and Michael A. Gore <em>Nature Plants</em> <a href="https://doi.org/10.1101/777623">Preprint</a></p></li>
+Roberto Lozano, Elodie Gazave, Jhonathan P.R. dos Santos, <strong>Markus G Stetter</strong>, Ravi Valluru, Nonoy Bandillo, Samuel B. Fernandes, Patrick J. Brown, Nadia Shakoor, Todd C. Mockler, Edward S. Buckler, Jeffrey Ross-Ibarra and Michael A. Gore <em>Nature Plants</em><br />
+<a href="https://doi.org/10.1101/777623">Preprint</a></p></li>
 </ul>
 </div>
 <div id="section-1" class="section level2">
