--- a/reading.html
+++ b/reading.html
@@ -398,8 +398,19 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.00 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="november" class="section level3">
+<h3>November</h3>
+<div id="thursday-november-4" class="section level4">
+<h4>Thursday November 4</h4>
+<p><a href="https://www.nature.com/articles/s41559-019-0976-1">Ye, et al, 2021</a> Genomic evidence of human selection on Vavilovian mimicry</p>
+</div>
+</div>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="thursday-october-28" class="section level4">
+<h4>Thursday October 28</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2021.10.20.465142v1">Grover, et al, preprint</a> Dual domestication, diversity, and differential introgression in Old World cotton diploids</p>
+</div>
 <div id="thursday-october-21" class="section level4">
 <h4>Thursday October 21</h4>
 <p><a href="https://doi.org/10.1093/molbev/msab287">Fuentes et al, 2021</a> Domestication shapes recombination patterns in tomato</p>
@@ -550,7 +561,7 @@ $(document).ready(function () {
 <p><a href="https://www.biorxiv.org/content/10.1101/2020.02.05.936450v2">James et al, preprint</a> A framework to quantify phenotypic and genotypic parallel evolution</p>
 </div>
 </div>
-<div id="november" class="section level3">
+<div id="november-1" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-26" class="section level4">
 <h4>Thursday November 26</h4>
@@ -713,7 +724,7 @@ $(document).ready(function () {
 <p>No C.R.O.P</p>
 </div>
 </div>
-<div id="november-1" class="section level3">
+<div id="november-2" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-28" class="section level4">
 <h4>Thursday November 28</h4>
@@ -933,7 +944,7 @@ $(document).ready(function () {
 <p><a href="https://www.nature.com/articles/s41477-018-0311-x.epdf?author_access_token=xkzOA83JbiSoU_JcVl-jntRgN0jAjWel9jnR3ZoTv0Ns64ESdcFnXqL2H6X2hOFO74BnjG-JklRF4Wbzm1M5_mixFqX7kt5fUEIyqVSE6l8VRhsCCo5jwGw3gxKZ-XSg4c4mto3kDdAQVTl0uW8nBA%3D%3D">Mieulet et al. 2018</a> Unleashing meiotic crossovers in crops</p>
 </div>
 </div>
-<div id="november-2" class="section level3">
+<div id="november-3" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-29" class="section level4">
 <h4>Thursday November 29</h4>
