--- a/reading.html
+++ b/reading.html
@@ -13,8 +13,8 @@
 
 <title>What we read</title>
 
-<script src="site_libs/header-attrs-2.7/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -376,7 +376,7 @@ $(document).ready(function () {
       <ul class="nav navbar-nav navbar-right">
         <li>
   <a href="https://twitter.com/mgstetter">
-    <span class="fas fa-twitter"></span>
+    <span class="fa fa-twitter"></span>
      
   </a>
 </li>
@@ -400,6 +400,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="november" class="section level3">
 <h3>November</h3>
+<div id="thursday-november-18" class="section level4">
+<h4>Thursday November 18</h4>
+<p>[Naish, et al, 2021](<a href="https://www.science.org/doi/10.1126/science.abi7489" class="uri">https://www.science.org/doi/10.1126/science.abi7489</a> The genetic and epigenetic landscape of the Arabidopsis centromeres</p>
+</div>
 <div id="thursday-november-4" class="section level4">
 <h4>Thursday November 4</h4>
 <p><a href="https://www.nature.com/articles/s41559-019-0976-1">Ye, et al, 2021</a> Genomic evidence of human selection on Vavilovian mimicry</p>
