--- a/people.html
+++ b/people.html
@@ -474,7 +474,15 @@ $(document).ready(function () {
 
 </div>
 <p>Tom is a master student studying the the amaranth transcriptome and the involvement of transcriptomic changes in metabolic pathways <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<!--
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Julio Martinez</strong>
+<div style="float: left">
+
+</div>
+<p>Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<!-- break
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
 </div>
@@ -490,29 +498,11 @@ $(document).ready(function () {
 
 </div>
 <p>Leonie is a CEPLAS intern evaluating the phenotypic diversity of a grain amaranth reference population. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<strong>Julio Martinez</strong>
+<!-- break 
+**Ahad Kazmi** 
 <div style="float: left">
-
 </div>
-<p>Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth. <!-- break 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-<div style="float: left">
-<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
-</div>
---></p>
-<strong>Ahad Kazmi</strong>
-<div style="float: left">
-
-</div>
-<p>Ahad is a biochemistry master student wroking on long read sequencing in amaranth. <!-- break 
+Ahad is a biochemistry master student wroking on long read sequencing in amaranth.
 <br>
 <br>
 <br>
@@ -523,7 +513,7 @@ $(document).ready(function () {
 
  <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
-</div>--></p>
+</div>-->
 </div>
 <div id="joining-the-lab" class="section level2">
 <h2>Joining the lab</h2>
