--- a/reading.html
+++ b/reading.html
@@ -402,7 +402,7 @@ $(document).ready(function () {
 <h3>November</h3>
 <div id="thursday-november-18" class="section level4">
 <h4>Thursday November 18</h4>
-<p>[Naish, et al, 2021](<a href="https://www.science.org/doi/10.1126/science.abi7489" class="uri">https://www.science.org/doi/10.1126/science.abi7489</a> The genetic and epigenetic landscape of the Arabidopsis centromeres</p>
+<p><a href="https://www.science.org/doi/10.1126/science.abi7489">Naish, et al, 2021</a> The genetic and epigenetic landscape of the Arabidopsis centromeres</p>
 </div>
 <div id="thursday-november-4" class="section level4">
 <h4>Thursday November 4</h4>
