Julio image added

--- a/people.html
+++ b/people.html
@@ -475,13 +475,13 @@ $(document).ready(function () {
 </div>
 <p>Tom is a master student studying the the amaranth transcriptome and the involvement of transcriptomic changes in metabolic pathways <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Julio Martinez</strong>
 <div style="float: left">
 
 </div>
-<p>Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth and the conservation of the MBW regulation network. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
