--- a/reading.html
+++ b/reading.html
@@ -398,8 +398,23 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.00 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="december" class="section level3">
+<h3>December</h3>
+<div id="thursday-december-9" class="section level4">
+<h4>Thursday December 9</h4>
+<p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1008945">Monnahan, et al, 2021</a> Predicting evolutionary change at the DNA level in a natural Mimulus population</p>
+</div>
+<div id="thursday-december-2" class="section level4">
+<h4>Thursday December 2</h4>
+<p><a href="https://elifesciences.org/articles/64165">Gibson, et al, 2021</a> Introgression shapes fruit color convergence in invasive Galápagos tomato</p>
+</div>
+</div>
 <div id="november" class="section level3">
 <h3>November</h3>
+<div id="thursday-november-25" class="section level4">
+<h4>Thursday November 25</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2021.11.11.468292v1.full">Wrightsman, et al, preprint</a> Modeling chromatin state from sequence across angiosperms using recurrent convolutional neural networks</p>
+</div>
 <div id="thursday-november-18" class="section level4">
 <h4>Thursday November 18</h4>
 <p><a href="https://www.science.org/doi/10.1126/science.abi7489">Naish, et al, 2021</a> The genetic and epigenetic landscape of the Arabidopsis centromeres</p>
@@ -554,7 +569,7 @@ $(document).ready(function () {
 </div>
 <div id="section" class="section level2">
 <h2>2020</h2>
-<div id="december" class="section level3">
+<div id="december-1" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-10" class="section level4">
 <h4>Thursday December 10</h4>
@@ -717,7 +732,7 @@ $(document).ready(function () {
 </div>
 <div id="section-1" class="section level2">
 <h2>2019</h2>
-<div id="december-1" class="section level3">
+<div id="december-2" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-12" class="section level4">
 <h4>Thursday December 12</h4>
@@ -929,7 +944,7 @@ $(document).ready(function () {
 </div>
 <div id="section-2" class="section level2">
 <h2>2018</h2>
-<div id="december-2" class="section level3">
+<div id="december-3" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-27" class="section level4">
 <h4>Thursday December 27</h4>
