Roswitha pic added

--- a/people.html
+++ b/people.html
@@ -456,7 +456,7 @@ $(document).ready(function () {
 <div id="lab-manager" class="section level2">
 <h2>Lab manager</h2>
 <div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/roswitha.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Roswitha Lentz</strong>
 <div style="float: left">
