--- a/reading.html
+++ b/reading.html
@@ -398,6 +398,12 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.00 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="thursday-january-13" class="section level4">
+<h4>Thursday January 13</h4>
+<p><a href="https://www.nature.com/articles/s41467-021-27432-z">Cai et al 2021</a> Genomic analyses provide insights into spinach domestication and the genetic basis of agronomic traits</p>
+</div>
+<div id="section" class="section level2">
+<h2>2021</h2>
 <div id="december" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-9" class="section level4">
@@ -567,7 +573,8 @@ $(document).ready(function () {
 <p><a href="https://www.pnas.org/content/117/52/33124">Kistler et al 2020</a> Archaeological Central American maize genomes suggest ancient gene flow from South America</p>
 </div>
 </div>
-<div id="section" class="section level2">
+</div>
+<div id="section-1" class="section level2">
 <h2>2020</h2>
 <div id="december-1" class="section level3">
 <h3>December</h3>
@@ -730,7 +737,7 @@ $(document).ready(function () {
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>2019</h2>
 <div id="december-2" class="section level3">
 <h3>December</h3>
@@ -942,7 +949,7 @@ $(document).ready(function () {
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>2018</h2>
 <div id="december-3" class="section level3">
 <h3>December</h3>
