--- a/reading.html
+++ b/reading.html
@@ -398,9 +398,23 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.00 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="february" class="section level3">
+<h3>February</h3>
+<div id="thursday-february-3" class="section level4">
+<h4>Thursday February 3</h4>
+<p><a href="https://www.nature.com/articles/s41586-021-04269-6">Monroe, et al 2022</a> Mutation bias reflects natural selection in Arabidopsis thaliana</p>
+</div>
+</div>
+<div id="january" class="section level3">
+<h3>January</h3>
+<div id="thursday-january-27" class="section level4">
+<h4>Thursday January 27</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2022.01.10.475641v1">Dahan-Meir, et al preprint</a> The genetic structure of a wild wheat population has remained associated with microhabitats over 36 years</p>
+</div>
 <div id="thursday-january-13" class="section level4">
 <h4>Thursday January 13</h4>
 <p><a href="https://www.nature.com/articles/s41467-021-27432-z">Cai et al 2021</a> Genomic analyses provide insights into spinach domestication and the genetic basis of agronomic traits</p>
+</div>
 </div>
 <div id="section" class="section level2">
 <h2>2021</h2>
@@ -539,7 +553,7 @@ $(document).ready(function () {
 <p><a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/j.1469-8137.2012.04253.x">Meyer et al 2012</a> Patterns and processes in crop domestication: an historical review and quantitative analysis of 203 global food crops</p>
 </div>
 </div>
-<div id="february" class="section level3">
+<div id="february-1" class="section level3">
 <h3>February</h3>
 <div id="thursday-febraury-25" class="section level4">
 <h4>Thursday Febraury 25</h4>
@@ -558,7 +572,7 @@ $(document).ready(function () {
 <p><a href="https://www.biorxiv.org/content/10.1101/2021.01.22.427575v1">Shirsekar et al preprint</a> Fine-scale Population Structure of North American Arabidopsis thaliana Reveals Multiple Sources of Introduction from Across Eurasia</p>
 </div>
 </div>
-<div id="january" class="section level3">
+<div id="january-1" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-28" class="section level4">
 <h4>Thursday January 28</h4>
@@ -710,7 +724,7 @@ $(document).ready(function () {
 <p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.6002">Price et al. 2020</a> In the presence of population structure: From genomics to candidate genes underlying local adaptation</p>
 </div>
 </div>
-<div id="february-1" class="section level3">
+<div id="february-2" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-27" class="section level4">
 <h4>Thursday February 27</h4>
@@ -729,7 +743,7 @@ $(document).ready(function () {
 <p><a href="https://www.nature.com/articles/s41467-019-13730-0">Baduel et al. 2019</a> Relaxed purifying selection in autopolyploids drives transposable element over-accumulation which provides variants for local adaptation</p>
 </div>
 </div>
-<div id="january-1" class="section level3">
+<div id="january-2" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-30" class="section level4">
 <h4>Thursday January 30</h4>
@@ -906,7 +920,7 @@ $(document).ready(function () {
 <p><a href="https://www.biorxiv.org/content/10.1101/559419v1">Buffalo and Coop preprint</a> The Linked Selection Signature of Rapid Adaptation in Temporal Genomic Data</p>
 </div>
 </div>
-<div id="february-2" class="section level3">
+<div id="february-3" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-28" class="section level4">
 <h4>Thursday February 28</h4>
@@ -925,7 +939,7 @@ $(document).ready(function () {
 <p><a href="https://www.pnas.org/content/116/6/2158">Chen, et al 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
-<div id="january-2" class="section level3">
+<div id="january-3" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
 <h4>Thursday January 31</h4>
