--- a/reading.html
+++ b/reading.html
@@ -400,6 +400,14 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="february" class="section level3">
 <h3>February</h3>
+<div id="thursday-february-17" class="section level4">
+<h4>Thursday February 17</h4>
+<p><a href="https://doi.org/10.1101/2021.09.13.459985">Battlay, et al 2021</a> Pleiotropy drives repeatability in the genetic basis of adaptation</p>
+</div>
+<div id="thursday-february-10" class="section level4">
+<h4>Thursday February 10</h4>
+<p><a href="https://doi.org/10.1371/journal.pgen.1009764">Novo, et al 2022</a> The estimates of effective population size based on linkage disequilibrium are virtually unaffected by natural selection</p>
+</div>
 <div id="thursday-february-3" class="section level4">
 <h4>Thursday February 3</h4>
 <p><a href="https://www.nature.com/articles/s41586-021-04269-6">Monroe, et al 2022</a> Mutation bias reflects natural selection in Arabidopsis thaliana</p>
