CROP and people

--- a/people.html
+++ b/people.html
@@ -497,7 +497,15 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Leonie is a CEPLAS intern evaluating the phenotypic diversity of a grain amaranth reference population. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Leonie is a student helper in the lab evaluating the phenotypic diversity of a grain amaranth reference population. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/Laura_Merx.JPG" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Laura Merx</strong>
+<div style="float: left">
+
+</div>
+<p>Laura is a CEPLAS rotation student working on large structural variants in amarnath <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break 
 **Ahad Kazmi** 
 <div style="float: left">
