--- a/reading.html
+++ b/reading.html
@@ -398,6 +398,17 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.00 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="april" class="section level3">
+<h3>April</h3>
+<div id="thursday-april-14" class="section level4">
+<h4>Thursday April 14</h4>
+<p>Manuscript in progress (contact Markus for access)</p>
+</div>
+<div id="thursday-april-7" class="section level4">
+<h4>Thursday April 7</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2022.03.30.486474v1">Solares, et al preprint</a> Insights into the domestication of avocado and potential genetic contributors to heterodichogamy</p>
+</div>
+</div>
 <div id="march" class="section level3">
 <h3>March</h3>
 <div id="thursday-march-17" class="section level4">
@@ -542,7 +553,7 @@ $(document).ready(function () {
 <p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1009411">Berdan et al 2021</a> Deleterious mutation accumulation and the long-term fate of chromosomal inversions</p>
 </div>
 </div>
-<div id="april" class="section level3">
+<div id="april-1" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-29" class="section level4">
 <h4>Thursday April 29</h4>
@@ -913,7 +924,7 @@ $(document).ready(function () {
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
-<div id="april-1" class="section level3">
+<div id="april-2" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-18" class="section level4">
 <h4>Thursday April 18</h4>
