people and Crop

--- a/people.html
+++ b/people.html
@@ -481,12 +481,23 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth and the conservation of the MBW regulation network. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Julio is a master student working on the molecular validation of domestication genes in grain amaranth and the conservation of the MBW regulation network. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
 </div>
 -->
+</div>
+<div id="bachelor-students" class="section level2">
+<h2>Bachelor students</h2>
+<div style="float: left">
+<p><img src="own_images/people/Hurmain_Ahmad.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Hurmain Ahmad</strong>
+<div style="float: left">
+
+</div>
+<p>Hurmain is a bachelor student ideintifing species diagnostic markers for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
@@ -501,11 +512,11 @@ $(document).ready(function () {
 <div style="float: left">
 <p><img src="own_images/people/Laura_Merx.JPG" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Laura Merx</strong>
+<strong>Krzysztov Pukacz</strong>
 <div style="float: left">
 
 </div>
-<p>Laura is a CEPLAS rotation student working on large structural variants in amarnath <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Krzysztov is a CEPLAS rotation student exploring Oxford Nanopore sequencing to identify structural variation in grain amaranth <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break 
 **Ahad Kazmi** 
 <div style="float: left">
