--- a/reading.html
+++ b/reading.html
@@ -400,6 +400,14 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="april" class="section level3">
 <h3>April</h3>
+<div id="thursday-april-28" class="section level4">
+<h4>Thursday April 28</h4>
+<p><a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.18026">Li, et al 2022</a> CsMYB1 integrates the regulation of trichome development and catechins biosynthesis in tea plant domestication</p>
+</div>
+<div id="thursday-april-21" class="section level4">
+<h4>Thursday April 21</h4>
+<p><a href="https://academic.oup.com/mbe/advance-article/doi/10.1093/molbev/msac078/6564429">Liu, et al 2022</a> A transposon insertion drove the loss of natural seed shattering during foxtail millet domestication</p>
+</div>
 <div id="thursday-april-14" class="section level4">
 <h4>Thursday April 14</h4>
 <p>Manuscript in progress (contact Markus for access)</p>
